Change in the register.html form to use POST method, this requires modifying the insertUser method in the controller from GET to a POST. Added HttpeSession object to use user registered in all the methods. Added home.html page, page for the user

--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -6,7 +6,7 @@
 
 </head>
 	<body>
-		<form th:action="@{insertUser}" th:object="${userx}">
+		<form th:action="@{registerPage/insertUser}" th:object="${userx}" method=post>
 			<span>Email</span>
 			<input type="text" th:field="*{email}" required/><br>
 			<span>Password</span>
