Add new feature, Subscriptions. Created one-to-many relationship between User and Subscriptions, so that users can have Basic or Premium subscription, adding Java configuration annotations in User and Subscription classes and their child classes BasicSubscription and PremiumSubscription. Created table subscriptions in schema.sql and modified users table with a foreign key from subscriptions. Additionally, added data.sql to have initial data inserted into the program, in this case, data from the subscriptions table. With this modification, application.properties is also updated to allow for this. Added DAO layer for User and Subscription extending JpaRepository to perform CRUD operations without using JDBC. CRUD operations are added in the Service layer and @EnableJpaRepositories is added in Application to enable JPA repository functionality.

--- a/src/main/resources/templates/main_pages/home.html
+++ b/src/main/resources/templates/main_pages/home.html
@@ -10,5 +10,8 @@
 	    <p>Welcome, <span th:text="${session.currentuser.name}"></span>!</p>
 	    <p>Email: <span th:text="${session.currentuser.email}"></span></p>
 	    
+   		<form th:action="@{/updateSubscriptionPage}">
+			<input type="submit" value="Update subscription"/>
+		</form>
 	</body>
 </html>
