--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,10 @@
 	<form th:action="@{/registerPage}">
 		<input type="submit" value="Sign up"/>
 	</form>
-
+	
+	<h3>Borrar este formulario cuando terminen las pruebas</h3>	
+	<form th:action="@{/home}">
+		<input type="submit" value="Go home"/>
+	</form>
 	</body>
 </html>
