Delete a user's subscription. Added the option to cancel users' subscriptions. Added the deleteUserSubscription method to the controller to handle this request for both Basic and Premium subscriptions. Using JDBC to set the user's subscription to null and then removing the associated subscription from the subscriptions table with a CRUD statement.

--- a/src/main/resources/templates/subscriptions/update_basic_subscription.html
+++ b/src/main/resources/templates/subscriptions/update_basic_subscription.html
@@ -27,7 +27,10 @@
         <input type="hidden" name="subscriptionType" value="PremiumSubscription"/>
         <input type="submit" value="Change to Premium Subscription"/>
     </form>
-     
-	
+    
+     <!-- Form to delte subscription -->
+    <form th:action="@{/deleteUserSubscription}" method="post" onsubmit="return confirm('Are you sure you want to finish your subscription?');">
+        <input type="submit" value="Finish my subscription"/>
+    </form>
 </body>
 </html>
