--- a/src/main/resources/templates/subscriptions/update_premium_subscription.html
+++ b/src/main/resources/templates/subscriptions/update_premium_subscription.html
@@ -27,5 +27,10 @@
         <input type="hidden" name="subscriptionType" value="BasicSubscription"/>
         <input type="submit" value="Change to Basic Subscription"/>
     </form>
+    
+     <!-- Form to delte subscription -->
+    <form th:action="@{/deleteUserSubscription}" method="post" onsubmit="return confirm('Are you sure you want to finish your subscription?');">
+        <input type="submit" value="Finish my subscription"/>
+    </form>
 </body>
 </html>
