New feature: User log out. Allows the user to log out of the application.Implemented in the AuthController class, where a new method called logout is created. This method invalidates the session and redirects the user to the Index page.

--- a/src/main/resources/templates/main_pages/home.html
+++ b/src/main/resources/templates/main_pages/home.html
@@ -13,5 +13,10 @@
    		<form th:action="@{/userSubscriptionPage}">
 			<input type="submit" value="Your subscription"/>
 		</form>
+		
+		<!-- Log out to Index -->
+   		<form th:action="@{/logout}">
+			<input type="submit" value="Log out"/>
+		</form>
 	</body>
 </html>
