--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -6,7 +6,7 @@
 
 </head>
 	<body>
-		<form th:action="@{registerPage/insertUser}" th:object="${userx}" method=post>
+		<form th:action="@{/registerPage/insertUser}" th:object="${userx}" method=post>
 			<span>Email</span>
 			<input type="text" th:field="*{email}" required/><br>
 			<span>Password</span>
