Update: Login user. Created Login.html form redirects to AuthController. New method in AuthController, loginUser, logs in the user after checking if the email exists in the database and the password matches the email.

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -7,5 +7,12 @@
 </head>
 	<body>
 	<h1>Login page</h1>
+		<form th:action="@{/loginPage/loginUser}" th:object="${userx}" method=post>
+			<span>Email</span>
+			<input type="text" th:field="*{email}" required/><br>
+			<span>Password</span>
+			<input type="password" th:field="*{password}" required/><br>
+			<input type="submit" value="Login"/>
+		</form>
 	</body>
 </html>
