--- a/src/main/resources/templates/main_pages/home.html
+++ b/src/main/resources/templates/main_pages/home.html
@@ -14,6 +14,11 @@
 			<input type="submit" value="Your subscription"/>
 		</form>
 		
+		<!--  -->
+   		<form th:action="@{/gymClassesPage}">
+			<input type="submit" value="Gym classes"/>
+		</form>
+		
 		<!-- Log out to Index -->
    		<form th:action="@{/logout}">
 			<input type="submit" value="Log out"/>
