Update of the gymClassesPage method. We added new fields to UserGymClassDto, gymClassName, and gymClassWeeklyDay to make the table more readable and simpler for the user.

--- a/src/main/resources/templates/gym_classes/gym_classes_overview.html
+++ b/src/main/resources/templates/gym_classes/gym_classes_overview.html
@@ -17,12 +17,16 @@
                 <tr>
                     <th>Email User</th>
                     <th>Gym Class ID</th>
+                    <th>Name Class</th>
+                    <th>Day of the week</th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="userGymClass : ${listUserGymClass}">
                     <td th:text="${userGymClass.emailUser}"></td>
                     <td th:text="${userGymClass.gymClassId}"></td>
+                    <td th:text="${userGymClass.gymClassName}"></td>
+                    <td th:text="${userGymClass.gymClassWeeklyDay}"></td>
                 </tr>
             </tbody>
         </table>
